// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`generator - app help should print expected information 1`] = `
"Usage: jhipster app [options]

[Default] Create a new JHipster application based on the selected options

Options:
  --auto-crlf                              Detect line endings
  --remove-needles                         Remove needles, needles are used by entity and language generators to inject code
  --defaults                               Execute jhipster with default config
  --jhi-prefix <value>                     Add prefix before services, controllers and states name
  --entity-suffix <value>                  Add suffix after entities name
  --dto-suffix <value>                     Add suffix after dtos name
  --pk-type <value>                        Default primary key type (beta)
  --test-frameworks <value...>             Test frameworks to be generated
  --skip-checks                            Check the status of the required tools
  --experimental                           Enable experimental features. Please note that these features may be unstable and may undergo breaking changes at any time
  --blueprints <value>                     A comma separated list of one or more generator blueprints to use for the sub generators, e.g. --blueprints kotlin,vuejs
  --disable-blueprints                     Disable blueprints support
  -d, --debug                              Enable debugger
  --reproducible                           Try to reproduce changelog
  --node-package-manager <value>           Force an unsupported client package manager
  --ignore-errors                          Don't fail on prettier errors.
  --creation-timestamp <value>             Project creation timestamp (used for reproducible builds)
  --skip-jhipster-dependencies             Don't write jhipster dependencies to package.json. (env: JHI_SKIP_JHIPSTER_DEPENDENCIES)
  --base-name <value>                      Application base name
  --jdl-store <value>                      JDL store
  --skip-client                            Skip the client-side application generation
  --skip-server                            Skip the server-side application generation
  --skip-user-management                   Skip the user management module during app generation
  --application-type <value>               Application type to generate (choices: "monolith", "gateway", "microservice")
  --prettier-tab-width <value>             Default tab width for prettier (default: 2)
  --monorepository                         Use monorepository
  --skip-commit-hook                       Skip adding husky commit hooks
  --enable-swagger-codegen                 API first development using OpenAPI-generator
  --search-engine <value>                  Provide search engine for the application when skipping server side generation (choices: "no", "elasticsearch", "couchbase")
  --skip-check-length-of-identifier        Skip check the length of the identifier, only for recent Oracle databases that support 30+ characters metadata
  --skip-fake-data                         Skip generation of fake data for development
  --websocket <value>                      Provide websocket option for the application when skipping server side generation
  --db <value>                             Provide DB name for the application when skipping server side generation
  --reactive                               Generate a reactive backend
  --service-discovery-type <value>         Service discovery type (choices: "consul", "eureka", "no")
  --auth <value>                           Provide authentication type for the application when skipping server side generation (choices: "jwt", "oauth2", "session")
  --feign-client                           Generate a feign client (default: false)
  --sync-user-with-idp                     Allow relationships with User for oauth2 applications
  --database-migration <value>             Database migration (choices: "liquibase", "no")
  --graalvm-support                        Experimental GraalVM Native support
  --message-broker <value>                 message broker (choices: "kafka", "pulsar", "no")
  --with-generated-flag                    Add a GeneratedByJHipster annotation to all generated java classes and interfaces
  --package-name <value>                   The package name for the generated application
  --project-version <value>                project version to use, this option is not persisted (env: JHI_PROJECT_VERSION)
  --jhipster-dependencies-version <value>  jhipster-dependencies version to use, this option is not persisted (env: JHIPSTER_DEPENDENCIES_VERSION)
  --build <value>                          Provide build tool for the application when skipping server side generation (default: maven) (choices: "maven", "gradle")
  --enable-gradle-develocity               Enable Gradle Develocity integration (default: false)
  --gradle-develocity-host <value>         Gradle Develocity Host
  --recreate-initial-changelog             Recreate the initial database changelog based on the current config
  --skip-db-changelog                      Skip the generation of database migrations
  --incremental-changelog                  Creates incremental database changelogs
  --dev-database-type <value>              Development database (choices: "postgresql", "mysql", "mariadb", "oracle", "mssql", "h2Disk", "h2Memory")
  --cache-provider <value>                 Cache provider (choices: "no", "caffeine", "ehcache", "hazelcast", "infinispan", "memcached", "redis")
  --enable-hibernate-cache                 Enable hibernate cache
  --client-framework <value>               Provide client framework for the application (choices: "angular", "react", "vue", "no")
  --microfrontend                          Enable microfrontend support
  --microfrontends <value>                 Microfrontends to load
  --client-test-framework <value>          undefined (default: jest) (choices: "jest", "vitest")
  --with-admin-ui                          Generate administrative user interface
  --client-root-dir <value>                Client root
  --skip-git                               Skip git repository initialization
  --force-git                              Force commit to git repository
  --commit-msg <value>                     Commit changes (implies forceGit)
  --cypress-coverage                       Enable Cypress code coverage report generation
  --cypress-audit                          Enable cypress-audit/lighthouse report generation
  --enable-translation                     Enable translation
  -l, --language <value...>                Language to be added to application (existing languages are not removed)
  -n, --native-language [value]            Set application native language
  --regenerate-languages                   Regenerate languages
  -h, --help                               display help for command
"
`;

exports[`generator - app jdlStore with application and entities should match snapshot 1`] = `
{
  ".yo-rc.json": {
    "contents": "{
  "generator-jhipster": {
    "creationTimestamp": 1577836800000,
    "jdlStore": "app.jdl"
  }
}
",
    "stateCleared": "modified",
  },
  "app.jdl": {
    "contents": "application {
  config {
    baseName jhipster
    skipClient true
    skipServer true
  }

  entities Foo, Bar
}

@ChangelogDate("20200101000100")
entity Foo
@ChangelogDate("20200101000200")
entity Bar
",
    "stateCleared": "modified",
  },
}
`;

exports[`generator - app jdlStore with application should match snapshot 1`] = `
{
  ".yo-rc.json": {
    "contents": "{
  "generator-jhipster": {
    "creationTimestamp": 1577836800000,
    "jdlStore": "app.jdl"
  }
}
",
    "stateCleared": "modified",
  },
  "app.jdl": {
    "contents": "application {
  config {
    baseName jhipster
    skipClient true
    skipServer true
  }
}
",
    "stateCleared": "modified",
  },
}
`;

exports[`generator - app jdlStore with incremental changelog application and entities should match snapshot 1`] = `
{
  ".jhipster/Bar.json": {
    "contents": "{
  "annotations": {
    "changelogDate": "20200101000200"
  },
  "fields": [],
  "name": "Bar",
  "relationships": []
}
",
    "stateCleared": "modified",
  },
  ".jhipster/Foo.json": {
    "contents": "{
  "annotations": {
    "changelogDate": "20200101000100"
  },
  "fields": [],
  "name": "Foo",
  "relationships": []
}
",
    "stateCleared": "modified",
  },
  ".yo-rc.json": {
    "contents": "{
  "generator-jhipster": {
    "creationTimestamp": 1577836800000,
    "jdlStore": "app.jdl"
  }
}
",
    "stateCleared": "modified",
  },
  "app.jdl": {
    "contents": "application {
  config {
    baseName jhipster
    incrementalChangelog true
    skipClient true
    skipServer true
  }

  entities Foo, Bar
}

@ChangelogDate("20200101000100")
entity Foo
@ChangelogDate("20200101000200")
entity Bar
",
    "stateCleared": "modified",
  },
}
`;
